# wxMpFormat

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  run.bat  run.py  wechat_article_generator.py  开发手册.md
prompt/: 提示词.md
static/css/: style.css
static/js/: app.js
templates/: config.html  index.html
范例/: 文章.md  文章_公众号版.md
